--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+
 /* root content's */
 :root {
-  --orange: #faa431;
+  --orange: #fea301;
+  --gray: #495560;
+  --black: #000;
+  --sky: #01acfd;
+  --white: #ffffff;
+  --akowa: #05d4df;
+  --purple: #5d58ef;
+  --gray_sky: #68a2df;
+  --blue: #01acfd;
   --background-light-color: #f1f1f1;
 }
 
@@ -8,25 +18,569 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Quicksand", serif;
+  scroll-behavior: smooth;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
   background-color: var(--background-light-color);
+}
+
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
 }
 
 /* container */
 .container {
-  /* max-width: 1170px; */
-  background-color: red;
-  
+  width: 100%;
 }
-.header {
-  
+header marquee {
+  padding-inline: 20%;
+  padding-block: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: var(--blue);
 }
 
- nav {
+nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-inline: 20%;
+  /* padding-inline: 186px; */
+  /* padding-block: 10px; */;
 }
+.logo {
+  font-size: 2.2rem;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+}
+nav ul {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+nav ul li a {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+nav ul li a:hover {
+  font-weight: 600;
+  transition: all 0.3s;
+}
+nav ul li:nth-child(1) a {
+  color: var(--orange);
+}
+nav ul li:nth-child(2) a {
+  color: var(--sky);
+}
+nav ul li:nth-child(3) a {
+  color: var(--akowa);
+}
+nav ul li:nth-child(3) a {
+  color: var(--purple);
+}
+.btn {
+  background-color: var(--orange);
+  /* font-size: 20px ; */
+  font-size: 1.2rem;
+  color: var(--white);
+  padding: 10px 25px;
+  border-radius: 9px;
+  font-weight: 600;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+.menu-btn {
+  display: flex;
+  gap: 10px;
+}
+.menu-btn button {
+  font-weight: 900;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+.menu-btn button:nth-child(2) {
+  display: none;
+}
+.menu-btn button i {
+  padding: 10px 10px;
+  font-size: 31px;
+}
+
+/* hero_section */
+
+.hero_section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 20%;
+  padding-block: 50px;
+}
+.hero_section .hero_left h1 {
+  font-size: 3.5rem;
+  font-weight: 700;
+  color: var(--gray);
+}
+.hero_left {
+  width: 50%;
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+  gap: 20px;
+}
+.hero_section .hero_left h1 span:nth-child(1) {
+  color: var(--orange);
+}
+.hero_section .hero_left h1 span:nth-child(3) {
+  color: var(--black);
+}
+.hero_section .hero_left h1 span:nth-child(4) {
+  color: var(--sky);
+}
+.hero_left p {
+  font-size: 1.2rem;
+  color: var(--gray);
+  margin-block: 20px;
+}
+
+.hero_right img {
+  width: 100%;
+}
+
+.curriculum {
+  width: 100%;
+  height: 879px;
+  background: url("./assets/bg.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 80%;
+  padding-top: 80px;
+}
+.curriculum_left h1 {
+  font-size: 3rem;
+  text-align: center;
+}
+.curriculum_left {
+  padding-inline: 20%;
+  /* display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 30px;
+  width: 100%; */
+}
+
+.cars {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-block: 60px;
+}
+
+.card {
+  width: 367.8px;
+  height: 476.78px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 50px 30px;
+  text-align: center;
+}
+.card button {
+  border: none;
+  outline: none;
+  font-size: 18px;
+  padding: 10px 15px;
+  font-weight: 600;
+  background-color: transparent;
+}
+.card p {
+  color: var(--gray);
+}
+
+.card1_btn {
+  color: var(--sky);
+}
+.card2_btn {
+  color: var(--orange);
+}
+.card3_btn {
+  color: var(--purple);
+}
+
+.cars .card1 {
+  background: linear-gradient(180deg, #def5ff 0%, rgba(255, 255, 255, 0) 40%),
+    #ffffff;
+  border: 0.943193px solid #def5ff;
+  box-shadow: inset 0px 0px 28.2958px 0.943193px rgba(0, 0, 0, 0.05);
+  border-radius: 18.8639px;
+}
+
+.cars .card2 {
+  background: linear-gradient(180deg, #fff4dc 0%, rgba(255, 255, 255, 0) 40%),
+    #ffffff;
+  border: 0.943193px solid #fff4dc;
+  box-shadow: inset 0px 0px 28.2958px 0.943193px rgba(0, 0, 0, 0.05);
+  border-radius: 18.8639px;
+}
+.cars .card3 {
+  background: linear-gradient(180deg, #eee1ff 0%, rgba(255, 255, 255, 0) 40%),
+    #ffffff;
+  border: 0.943193px solid #f2e8ff;
+  box-shadow: inset 0px 0px 28.2958px 0.943193px rgba(0, 0, 0, 0.05);
+  border-radius: 18.8639px;
+}
+
+.bottom_arrow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+}
+.bottom_arrow button {
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  background: var(--orange);
+  border: none;
+  outline: none;
+}
+.bottom_arrow button i {
+  font-size: 30px;
+  font-weight: 600;
+  color: var(--white);
+}
+
+/* Our_Stories */
+.Our_Stories {
+  width: 100%;
+  height: 1018.02px;
+
+  background: url(image.png),
+    linear-gradient(
+      360deg,
+      rgba(254, 161, 1, 0.218) 0%,
+      rgba(255, 255, 255, 0.166) 100%
+    );
+}
+/* story_card */
+
+.story_1 {
+  width: 540.27px !important;
+  height: 606px;
+  background: var(--white);
+  border-radius: 10px;
+  position: relative;
+}
+.story_1 img {
+  border-radius: 10px 10px 0px 0px;
+}
+.story_1 .card_text_section {
+  padding: 30px 24px;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  row-gap: 30px;
+  height: 50%;
+}
+.story_1 .card_text_section button {
+  position: absolute;
+  height: 47.93px;
+  left: 38.35px;
+  right: 327.41px;
+  top: 314.14px;
+
+  background: #3cd8e8;
+  border-radius: 47.9343px;
+  border: none;
+  color: var(--white);
+}
+.story_1 .card_text_section h3 {
+  font-size: 1.5rem;
+}
+/* story_card */
+
+.story_card {
+  width: 290.69px;
+  background: var(--white);
+  border-radius: 10px;
+  position: relative;
+}
+.story_card .card_text_section {
+  padding: 30px 24px;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  row-gap: 30px;
+}
+.story_card img {
+  width: 100%;
+  border-radius: 10px 10px 0px 0px;
+}
+/* ajkfsdfkjsf */
+.story_card_box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+.Stories_right {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 25px;
+  position: relative;
+}
+
+.story_card button {
+  /* Background */
+
+  position: absolute;
+  height: 38.35px;
+  left: 38.35px;
+  right: 78.14px;
+  top: 157.81px;
+  border: none;
+  color: var(--white);
+  background: #95b226;
+  border-radius: 47.9343px;
+}
+
+.story_bottom_arrow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.story_bottom_arrow button {
+  font-size: 24px;
+  background: var(--black);
+  border: none;
+  outline: none;
+}
+
+footer {
+  padding-inline: 20%;
+  height: 519px;
+  background: var(--blue);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--white);
+}
+.for_footter_content {
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  justify-content: space-between;
+}
+.footer_left {
+  display: flex;
+  width: 30%;
+  flex-direction: column;
+  gap: 30px;
+}
+.footer_left div {
+  display: flex;
+  flex-direction: row;
+  gap: 14px;
+}
+
+/* footer_mid */
+.footer_mid {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.footer_mid ul {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+}
+.footer_mid ul li a {
+  color: var(--white);
+  font-size: 1.5rem;
+}
+
+/* footer_right */
+.footer_right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  gap: 20px;
+}
+.footer_right ul {
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+}
+
+::-webkit-scrollbar {
+  width: 0.8em;
+  height: 0.5em;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--orange);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--purple);
+}
+
+
+/* End of the footer */
+
+/* start of the media queries */
+
+/* for 1024px */
+@media screen and (max-width: 1024px) {
+  nav, .hero_section, .curriculum_left, footer {
+    padding-inline: 10%;
+  }
+  
+  .hero_section {
+    flex-direction: column;
+    text-align: center;
+  }
+  
+  .hero_left {
+    width: 100%;
+    align-items: center;
+  }
+  
+  .cars {
+    flex-direction: column;
+    gap: 30px;
+  }
+  
+  .story_card_box {
+    flex-direction: column;
+  }
+  
+  .Stories_right {
+    grid-template-columns: 1fr;
+  }
+  
+  .for_footter_content {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    text-align: center;
+  }
+  
+  .footer_left {
+    width: 100%;
+    align-items: center;
+  }
+}
+
+/* for 768px */
+@media screen and (max-width: 768px) {
+  nav {
+    flex-direction: column;
+    gap: 20px;
+    padding-block: 20px;
+  }
+  
+  .menu-btn button:nth-child(2) {
+    display: block;
+  }
+  
+  nav ul {
+    display: none;
+  }
+  
+  .hero_section .hero_left h1 {
+    font-size: 2.5rem;
+  }
+  
+  .card {
+    width: 90%;
+    height: auto;
+    padding: 30px 20px;
+  }
+  
+  .story_1 {
+    width: 100% !important;
+    height: auto;
+  }
+  
+  .story_card {
+    width: 100%;
+  }
+}
+
+/* for 425px */
+@media screen and (max-width: 425px) {
+  header marquee {
+    padding-inline: 5%;
+    font-size: 1rem;
+  }
+  
+  .logo {
+    font-size: 1.8rem;
+  }
+  
+  .hero_section .hero_left h1 {
+    font-size: 2rem;
+  }
+  
+  .curriculum_left h1 {
+    font-size: 2rem;
+  }
+  
+  .bottom_arrow button {
+    width: 45px;
+    height: 45px;
+  }
+  
+  .footer_mid ul li a {
+    font-size: 1.2rem;
+  }
+}
+
+/* for 375px and below */
+@media screen and (max-width: 375px) {
+  .hero_section .hero_left h1 {
+    font-size: 1.8rem;
+  }
+  
+  .btn {
+    font-size: 1rem;
+    padding: 8px 20px;
+  }
+  
+  .card {
+    padding: 20px 15px;
+  }
+}
+
+/* for 320px */
+@media screen and (max-width: 320px) {
+  .container {
+    padding-inline: 1%;  
+  }
+}
+
+
+/* End of the media queries */  
